finished html and css

--- a/index.html
+++ b/index.html
@@ -5,14 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width= , initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div>Yoyoyo header</div>
+        <div><h2>Bustblocker</h2></div>
     </header>
 
+    <main>
+        <div>
+            <h1>Save the DVD!</h1>
+            <p id="first-paragraph">... bring back the good old days</p>
+            <img src="img/tv.jpg" alt="old school tv">
+            <p id="second-paragraph">Sign up to join the revolution!</p>
+            <input id="inputbox" placeholder="Email"/>
+            <button id="submit-button">Let's fvcking goooo</button>
+        </div>
+    </main>
+
     <footer>
-        <div>Yoyoyo footer</div>
+        <div><h2 id="footer-headline">*We do not take any responsibility for the inevitable downfall of any major streaming platforms*</h2></div>
     </footer>
 </body>
 </html>
