made final changes

--- a/index.html
+++ b/index.html
@@ -8,23 +8,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <header>
         <div><h2>Bustblocker</h2></div>
     </header>
 
     <main>
-        <div>
+        <section id="calltoaction">
             <h1>Save the DVD!</h1>
             <p id="first-paragraph">... bring back the good old days</p>
             <img src="img/tv.jpg" alt="old school tv">
+        </section>
+
+        <section id="signup">
             <p id="second-paragraph">Sign up to join the revolution!</p>
             <input id="inputbox" placeholder="Email"/>
             <button id="submit-button">Let's fvcking goooo</button>
-        </div>
+        </section>
     </main>
 
     <footer>
         <div><h2 id="footer-headline">*We do not take any responsibility for the inevitable downfall of any major streaming platforms*</h2></div>
     </footer>
+
 </body>
 </html>
